cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_Priority_Rating__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Priority_Rating__c</fullName>
    <inlineHelpText>Please select the meeting priority that reflects the sort of meeting this is.</inlineHelpText>
    <label>Meeting Priority Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1- High Profile/ High Complexity</fullName>
            </value>
            <value>
                <fullName>2- Potential Special Attention Needed</fullName>
            </value>
            <value>
                <fullName>3- Normal Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>