cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Start_Date_Time__c</fullName>
    <description>This is the date and time of the meeting.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date and time of the meeting. This will create an Event for the Meeting.</inlineHelpText>
    <label>Meeting Start Date/Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>