cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Meeting_Title_as_provided_by_client__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Title_as_provided_by_client__c</fullName>
    <description>100 char. Title to be used for emails, etc</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Title (as provided by client)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>