cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/MTG_Description__c.field-meta.xml
<CustomField>
    <fullName>MTG_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>please enter any descriptive info not in other fields</inlineHelpText>
    <label>MTG Description</label>
    <type>TextArea</type>
</CustomField>