cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/NEW_Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>NEW_Estimated_Duration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field automatically calculates the number of hours and minutes for the meeting based on the start and end date/time of the meeting. This cannot be edited unless you change the meeting start/end times.</inlineHelpText>
    <label>Estimated Duration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>