cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/NEW_Estimated_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>NEW_Estimated_Duration_Minutes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the estimated duration of the meeting based on the start and end time of the meeting.</inlineHelpText>
    <label>NEW Estimated Duration (Minutes)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>