cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Notify_Business_Lead_when_has_started__c.field-meta.xml
<CustomField>
    <fullName>Notify_Business_Lead_when_has_started__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this off if you would like the OE Business Lead to be notified that the meeting has started.</inlineHelpText>
    <label>Notify Business Lead when has started?</label>
    <type>Checkbox</type>
</CustomField>