cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Notify_Organizer_when_Meeting_started__c.field-meta.xml
<CustomField>
    <fullName>Notify_Organizer_when_Meeting_started__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if you would like the Meeting Organizer to receive an automatic email when the meeting starts.</inlineHelpText>
    <label>Notify Organizer when Meeting started?</label>
    <type>Checkbox</type>
</CustomField>