cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Number_of_Basic_Meeting_Assumption__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Basic_Meeting_Assumption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check off this box if a Meeting has no numbers associated to any of the &quot;number of meeting&quot; fields. This means that 0 are attributed so we are to assume that at least 1 basic meeting has been applied to that event. Review &quot;BM Data Bank&quot; google sheet or contact Sam Alden/System Admin any questions.</description>
    <inlineHelpText>Check off this box if a Meeting has no numbers associated to any of the &quot;number of meeting&quot; fields. This means that 0 are attributed so we are to assume that at least 1 basic meeting has been applied to that event. Review &quot;BM Data Bank&quot; google sheet or contact Sam Alden/System Admin any questions.</inlineHelpText>
    <label>Number of Basic Meeting Assumption?</label>
    <type>Checkbox</type>
</CustomField>