cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Number_of_Basic_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Basic_Meetings__c</fullName>
    <description>Please enter the number of basic meetings for his conference -</description>
    <label>Number of Basic Meetings</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>