cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Number_of_Corporations_if_VC__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Corporations_if_VC__c</fullName>
    <description>IF this event is a Virtual Conference enter number of expected corporations</description>
    <inlineHelpText>IF this event is a Virtual Conference enter number of expected corporations</inlineHelpText>
    <label>Number of Corporations if VC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>