cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Number_of_minutes_before_start__c.field-meta.xml
<CustomField>
    <fullName>Number_of_minutes_before_start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Number of minutes before start time</inlineHelpText>
    <label>Number of minutes before start</label>
    <length>80</length>
    <type>Text</type>
</CustomField>