cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Number_of_Moderated_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Moderated_Meetings__c</fullName>
    <description>per new definition of Moderated meetings please enter the number contained in this meeting</description>
    <label>Number of Moderated Meetings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>