cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Number_of_OE_Live_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_OE_Live_Meetings__c</fullName>
    <description>enter the number of Knovios required in this meeting</description>
    <inlineHelpText>enter the number of Knovios required in this meeting</inlineHelpText>
    <label>Number of OE Live Meetings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>