cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Number_of_Total_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Total_Meetings__c</fullName>
    <inlineHelpText>Totals all basic, enhanced, moderated, live, and webinar</inlineHelpText>
    <label>Number of Total Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>