cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Number_of_Webinar_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Webinar_Meetings__c</fullName>
    <description>Number of Webinar Meetings</description>
    <inlineHelpText>Please enter Number of Zoom Webinars in this meeting</inlineHelpText>
    <label>Number of Webinar Meetings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>