cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Numer_of_total_Participants__c.field-meta.xml
<CustomField>
    <fullName>Numer_of_total_Participants__c</fullName>
    <description>Number of total participants in the meeting</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>please enter an estimate of the total number of people in the meeting, including webinar attendees and all conference room &amp; desktop/mobile attendees</inlineHelpText>
    <label>Numer of total Participants</label>
    <length>25</length>
    <type>Text</type>
</CustomField>