cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/OE_Business_Lead__c.field-meta.xml
<CustomField>
    <fullName>OE_Business_Lead__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Select the person at OE that is handling the Business side of the meeting.</inlineHelpText>
    <label>OE Business Lead</label>
    <length>80</length>
    <type>Text</type>
</CustomField>