cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/OE_Business_Type_Services__c.field-meta.xml
<CustomField>
    <fullName>OE_Business_Type_Services__c</fullName>
    <description>Meeting Type for the Service delivery teams usage</description>
    <inlineHelpText>Meeting Type for the Service delivery teams usage note if Livestream is part of a OE connect meeting select LiveStream as Meeting type. If Webinar, select OE Connect</inlineHelpText>
    <label>OE Business Type (Services)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OE Connect</fullName>
            </value>
            <value>
                <fullName>Live Stream</fullName>
            </value>
            <value>
                <fullName>Virtual Conference</fullName>
            </value>
            <value>
                <fullName>RSA Engagement</fullName>
            </value>
            <value>
                <fullName>FO</fullName>
            </value>
            <value>
                <fullName>IPO</fullName>
            </value>
            <value>
                <fullName>MUNI</fullName>
            </value>
            <value>
                <fullName>1 on 1</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Industry Expert</fullName>
            </value>
            <value>
                <fullName>Deal Group</fullName>
            </value>
            <value>
                <fullName>Analyst Marketing</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Deal 1-on-1</fullName>
            </value>
            <value>
                <fullName>I-Banking (investment banking)</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Bus Dev</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>