cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/OLD_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>OLD_Request_Notes__c</fullName>
    <description>participant notes</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>participants other than traditional roles</inlineHelpText>
    <label>OLD Request Notes</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>