cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/On_Site__c.field-meta.xml
<CustomField>
    <fullName>On_Site__c</fullName>
    <inlineHelpText>select whether this event requires OE personnel on site or whether they can handle remotely</inlineHelpText>
    <label>On-Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>remote</fullName>
                <default>true</default>
                <label>remote</label>
            </value>
            <value>
                <fullName>onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>