cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Order_Related__c.field-meta.xml
<CustomField>
    <fullName>Order_Related__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>After you have recreated this Meeting as an Order, please populate the Order Number here</inlineHelpText>
    <label>Order Related</label>
    <length>80</length>
    <type>Text</type>
</CustomField>