cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Other_OE_Connection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_OE_Connection_Notes__c</fullName>
    <description>non-traditional participants</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>enter info about not-traditional role participants</inlineHelpText>
    <label>Other OE Connection Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>