cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Other_Product__c.field-meta.xml
<CustomField>
    <fullName>Other_Product__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>