cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Owner_Email_Address_for_Google__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email_Address_for_Google__c</fullName>
    <description>Used for google event integration so the owner will be listed as a guess on the event.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used for google event integration so the owner will be listed as a guess on the event.</inlineHelpText>
    <label>Owner Email Address for Google</label>
    <type>Email</type>
</CustomField>