cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>