cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mac</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Mobile - iOS</fullName>
            </value>
            <value>
                <fullName>Mobile - Droid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>