cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/PreProduction_Available_Netwrk__c.field-meta.xml
<CustomField>
    <fullName>PreProduction_Available_Netwrk__c</fullName>
    <label>PreProduction Available Netwrk?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dedicated wired</fullName>
                <default>true</default>
                <label>dedicated wired</label>
            </value>
            <value>
                <fullName>shared wired</fullName>
            </value>
            <value>
                <fullName>dedicated wireless</fullName>
            </value>
            <value>
                <fullName>shared wireless</fullName>
            </value>
            <value>
                <fullName>OE provided bonded Cellular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>