cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OE Meetings</fullName>
            </value>
            <value>
                <fullName>OE Networks</fullName>
            </value>
            <value>
                <fullName>OE Profiles</fullName>
            </value>
            <value>
                <fullName>Vidyo</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>User Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>