cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Reason_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Reason_Cancelled__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the reason the meeting was cancelled.</inlineHelpText>
    <label>Reason Cancelled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>