cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Record_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Record_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this checkbox indicates that the meeting is to be recorded</description>
    <inlineHelpText>Check if recording is approved/requested for this meting. Add notes below to specify how it its to be record, what views, etc.</inlineHelpText>
    <label>Record Meeting?</label>
    <type>Checkbox</type>
</CustomField>