cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Recording_Notes__c.field-meta.xml
<CustomField>
    <fullName>Recording_Notes__c</fullName>
    <description>test field to add info</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>please add any relevant info about the type of recording if requested - that is - what views, is transcript wanted, is it to be on demand, preference Zoom or OE?</inlineHelpText>
    <label>Recording Notes</label>
    <type>TextArea</type>
</CustomField>