cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Sell_Side_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sell_Side_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter notes about the Sell Side information.</inlineHelpText>
    <label>Sell Side Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>