cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/SFDCSupportTime__c.field-meta.xml
<CustomField>
    <fullName>SFDCSupportTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SFDCSupportTime</label>
    <length>80</length>
    <type>Text</type>
</CustomField>