cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Showcase_Branded__c.field-meta.xml
<CustomField>
    <fullName>Showcase_Branded__c</fullName>
    <label>Showcase Branded?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>