cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Speaker_Bios_Org_Info_Metadata_added__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Bios_Org_Info_Metadata_added__c</fullName>
    <label>Speaker Bios, Org Info, Metadata added?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>