cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Assigned - In Progress</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Conference Build Started</fullName>
            </value>
            <value>
                <fullName>Meeting Started</fullName>
            </value>
            <value>
                <fullName>meeting ended - awaiting final documentation</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rescheduled - Date unknown</fullName>
            </value>
            <value>
                <fullName>Rescheduled - Confirmed Date</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
            <value>
                <fullName>Converted to Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>