cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Status_for_Google_Integration__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Google_Integration__c</fullName>
    <description>Google events are automatically created from the meeting. Google events only allow a status of confirmed or cancelled. So we are mapping the meeting status&apos; to one of these. This is a a hidden field.</description>
    <inlineHelpText>Google events are automatically created from the meeting. Google events only allow a status of confirmed or cancelled. So we are mapping the meeting status&apos; to one of these. This is a a hidden field.</inlineHelpText>
    <label>Status for Google Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>confirmed</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>