cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/SuppliedCompany__c.field-meta.xml
<CustomField>
    <fullName>SuppliedCompany__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Web Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>