cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/SuppliedEmail__c.field-meta.xml
<CustomField>
    <fullName>SuppliedEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Web Email</label>
    <type>Email</type>
</CustomField>