cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/SuppliedName__c.field-meta.xml
<CustomField>
    <fullName>SuppliedName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Web Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>