cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/SuppliedPhone__c.field-meta.xml
<CustomField>
    <fullName>SuppliedPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Web Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>