cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Testing__c.field-meta.xml
<CustomField>
    <fullName>Testing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Duration in Minutes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>