cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Total_Cancelled_Participants__c.field-meta.xml
<CustomField>
    <fullName>Total_Cancelled_Participants__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Total number of participants in the cancelled status.</inlineHelpText>
    <label>Total Cancelled Participants</label>
    <length>80</length>
    <type>Text</type>
</CustomField>