cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Total_Parcipants_in_Ready_Status__c.field-meta.xml
<CustomField>
    <fullName>Total_Parcipants_in_Ready_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Total number of participants with a Ready status.</inlineHelpText>
    <label>Total Parcipants in Ready Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>