cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Total_Participant_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Participant_Records__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Total of all participant records all statuses</inlineHelpText>
    <label>Total Participant Records</label>
    <length>80</length>
    <type>Text</type>
</CustomField>