cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Total_Participants_Ready__c.field-meta.xml
<CustomField>
    <fullName>Total_Participants_Ready__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Total Participants in Ready Status, Cancelled Status, or Audio Status. When this number equals the total participants, then the meeting status will change automatically to Ready.</inlineHelpText>
    <label>Total Participants Ready, Audio, Cancel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>