cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Total_Weekday_Count_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Total_Weekday_Count_of_Event__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Number of total days of the event that looks at between Start Date and End Date. Excludes Weekends</inlineHelpText>
    <label>Total_Weekday_Count_of_Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>