cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Trigger_Email_to_Slack__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Email_to_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Meeting status has not been set to Conference Build Started. This box will be automatically checked 15 minutes before the meeting start time.</inlineHelpText>
    <label>Trigger Email to Slack</label>
    <type>Checkbox</type>
</CustomField>