cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>