cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Type_of_Stream__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Stream__c</fullName>
    <label>Type of Stream?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video with KV slide Sync</fullName>
            </value>
            <value>
                <fullName>Video Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>