cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/What_is_the_Dept_Group_for_this_mtg__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Dept_Group_for_this_mtg__c</fullName>
    <inlineHelpText>enter if important for this account</inlineHelpText>
    <label>What is the Dept/Group for this mtg?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Access</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>ICG</fullName>
            </value>
            <value>
                <fullName>GMCS</fullName>
            </value>
            <value>
                <fullName>GIS/HSS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>