cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/fields/Zapier_Test_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Zapier_Test_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for testing Zapier and google calendara</inlineHelpText>
    <label>Zapier Test Meeting</label>
    <type>Checkbox</type>
</CustomField>