cititechdNew2024Jan/force-app/main/default/objects/Meetings_Archived__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CaseNumber__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Meetings Archived Records</label>
</ListView>